# Workshop-In-Communication-Networks

./: C1.txt  C2.txt  CMakeLists.txt  Client1.txt  Client2.txt  Makefile  README.md  bw_template.h  bw_template_pd.c  bw_template_pd_getreq.c  bw_template_recv_approach_multi_shared_store.c  client.c  linkedlist_pairs.c  linkedlist_pairs.h  server  server.c
